# luducat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  babel.cfg  com.luducat.luducat.desktop  luducat.bat  luducat.desktop  luducat.sh  pyproject.toml  requirements.txt  videos.html
docs/: comparisons.md  configuration.md  security-model.md
docs/design/: achievements-and-gog-features.md
docs/plugins/: FAQ.md  Home.md  _Sidebar.md  introduction.md  licensing.md  naming-conventions.md  philosophy.md  quickstart.md  submitting-guidelines.md
docs/plugins/generator/: generate_plugin.py
docs/wiki/: Community-Plugins.md  Community-Themes.md
luducat/: __init__.py  __main__.py  main.py
luducat/assets/appicons/: app_icon.icns
luducat/assets/contentfilter/: keywords.txt
luducat/assets/locale/: luducat.pot
luducat/assets/themes/: azure-horizon.luducat-theme  base.qss  bookshelf.luducat-theme  cinematic.luducat-theme  fin_de_siecle.luducat-theme  gilded-grimoire.luducat-theme  library-card.luducat-theme  luducat.luducat-theme  retro-terminal.luducat-theme  steam-2003.luducat-theme  windows-7.luducat-theme
luducat/core/: __init__.py  backup_manager.py  browser_cookies.py  cache_manager.py  collection_service.py  config.py  constants.py  content_filter.py  credentials.py  database.py  db_accessor.py  directory_health.py  directory_migrate.py  dt.py  enrichment_service.py  enrichment_state.py  game_entry.py  game_manager.py  game_service.py  i18n.py  json_compat.py  lazy_metadata.py  logging.py  metadata_resolver.py  network_manager.py  network_monitor.py  news.py  plugin_manager.py  plugin_verifier.py  proxy_manager.py  runner_subprocess.py  runtime_base.py  runtime_manager.py  sleep_inhibitor.py  sync_orchestrator.py  sync_queue.py  tag_service.py  theme_manager.py  theme_package.py  theme_variables.py  (+2 more)
luducat/core/migrations/: __init__.py  versions.py
luducat/plugins/: __init__.py  base.py
luducat/plugins/epic/: __init__.py  config_dialog.py  database.py  epic_api.py  epic_session.py  plugin.json  store.py
luducat/plugins/gog/: __init__.py  database.py  galaxy_db.py  gog_api.py  gogdb_importer.py  plugin.json  store.py
luducat/plugins/heroic/: __init__.py  plugin.json  provider.py
luducat/plugins/igdb/: __init__.py  api.py  database.py  plugin.json  provider.py
luducat/plugins/lutris/: __init__.py  plugin.json  provider.py
luducat/plugins/pcgamingwiki/: __init__.py  api.py  database.py  plugin.json  provider.py
luducat/plugins/playnite/: plugin.json  provider.py
luducat/ui/: __init__.py  badge_painter.py  content_area.py  context_menu.py  cover_view.py  filter_bar.py  game_list.py  list_view.py  main_window.py  screenshot_view.py  status_bar.py  sync_progress_bar.py  sync_widget.py  toolbar.py
luducat/utils/: __init__.py  browser.py  icons.py  image_cache.py  memory.py  random_image_picker.py  signing.py  style_helpers.py  workers.py
(+162 files in other folders)
